--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -117,7 +117,7 @@
         font-size: 14px;
         position: absolute;
         right: 0;
-        top: auto;
+        top: 7px;
         padding: 4px 20px
      }
      @media screen and (max-width: 425px) {
